--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" initial-scale="1.0">
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <title>Main</title>
-<link rel="icon/png" href="icon.png">
+<link rel="icon" href="icon.png">
 </head>
 <body>
 <h1>Index</h1>
