--- a/onlinepiano/index.html
+++ b/onlinepiano/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Online Piano</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-    <link rel="icon" href="https://takra1.github.io/icon.png"/>
+    <link rel="icon" href="https://takra1.github.io/onlinepiano/icon.png"/>
 </head>
 <body style="user-select: none; background-color:#999; margin: 0">
     <h1 style="margin: auto; display: block; position: absolute; bottom: 0px; top: 0; left: 0; right: 0; text-align: center">Online Piano <a href="https://takra1.github.io">main</a></h1>
