--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Index</h1>
-<a href="/online_piano">online piano</a>
+<a href="/onlinepiano">online piano</a>
 </body>
 </html>
