--- a/onlinepiano/index.html
+++ b/onlinepiano/index.html
@@ -15,7 +15,7 @@
 
         ctx.font = "30px consolas";
         ctx.fillStyle = "#FFF";
-        ctx.fillText("Online Piano", 10, 497);
+        ctx.fillText("Online Piano (Note: first note is A1)", 10, 497);
 
         notes = 24;
         width = canvas.width / notes;
