--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
 <h1>Index</h1>
 <a href="/onlinepiano">online piano</a>
 <a href="/audio">audio files</a>
+<script>
+(async () => {
+        const response = await fetch('https://api.github.com/repos/:user/:repo/contents/');
+        const data = await response.json();
+        let htmlString = '<ul>';
+        for (let file of data) {
+          htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
+        }
+        htmlString += '</ul>';
+        document.getElementsByTagName('body')[0].innerHTML = htmlString;
+      })()
+</script>
 </body>
 </html>
