--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <h1>Index</h1>
 <a href="/onlinepiano">online piano</a>
 <a href="/audio">audio files</a>
+<?php
+glob(string $pattern, int $flags = 0): array|false
+?>
 </body>
 </html>
