--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <a href="/onlinepiano">online piano</a>
 <a href="/audio">audio files</a>
 <?php
-glob(string $pattern, int $flags = 0): array|false
+foreach (glob("*") as $filename) {
+    echo "$filename size " . filesize($filename) . "\n";
+}
 ?>
 </body>
 </html>
