--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Main</title>
 </head>
 <body>
-<h1>Index</h1>
+<h1>Index</h1>d
 <a href="/onlinepiano">online piano</a>
 <a href="/audio">audio files</a>
 <?php
