--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 <h1>Index</h1>d
 <a href="/onlinepiano">online piano</a>
 <a href="/audio">audio files</a>
-<?php
-foreach (glob("*") as $filename) {
-    echo "$filename size " . filesize($filename) . "\n";
-}
-?>
+<a href="/hyperdos">Hyper DOS</a>
 </body>
 </html>
