--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Main</title>
 </head>
 <body>
-<h1>Index</h1>d
+<h1>Index</h1>
 <a href="/onlinepiano">online piano</a>
 <a href="/audio">audio files</a>
 <a href="/hyperdos">Hyper DOS</a>
