--- a/hyperdos/index.html
+++ b/hyperdos/index.html
@@ -1,4 +1,5 @@
 <html>
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <head><title>Display</title></head>
 <body>
 <canvas id="display">Error displaying canvas.</canvas>
